# pyframe_eval

./: .clang-format  CMakeLists.txt  README.md  cpython_defs.cpp  cpython_defs.h  evalFrame.cpp  eval_frame.cpp  eval_frame.h  main.cpp  main.py  pyproject.toml  python_compat.h  pythoncapi_compat.h  requirements.txt  setup.py  test.py
.github/workflows/: pypi.yml  test.yml  test_pypi.yml  wheels.yml
cpp_ext/: cpythonDefs.cpp  cpythonDefs.h  evalFrame.cpp
pyframe_eval/: __init__.py
tests/: test.py
