[build-system]
requires = [
    "cmake",
    "ninja",
    "setuptools>=42",
    "pybind11>=2.10.4",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "3"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
build = "cp311-*"
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"