[build-system]
requires = [
    "setuptools>=42",
    "pybind11[global]>=2.10.4",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = "3"
build = "cp311-*"
test-command = "python {project}/tests/test.py"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
